--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ FORWARD_REDIS_PORT=6386
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=314032451fdc62
-MAIL_PASSWORD=3e56ecd7a41e3b
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_SCHEME=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
